<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:src="@drawable/module_uilib_icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_commit"
        android:textSize="16sp"
        android:textColor="@drawable/module_mine_text_blue_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/module_mine_commit"
        android:padding="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <TextView
        android:id="@+id/tv_title"
        android:textSize="32sp"
        android:textColor="@color/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/module_mine_feedback_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:hint="@string/module_mine_feedback_input_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                android:id="@+id/v_line"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:background="@color/line"
                android:layout_marginTop="17.5dp"
                app:layout_constraintStart_toStartOf="@id/et_content"
                app:layout_constraintEnd_toEndOf="@id/et_content"
                app:layout_constraintTop_toBottomOf="@id/et_content"/>

            <TextView
                android:id="@+id/tv_limit_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/gray_three"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                tools:text="@string/module_mine_limit_tip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_line"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_content"
                android:layout_width="0dp"
                android:layout_height="86dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_limit_tip"
                tools:listitem="@layout/uilib_item_select_thumbnail"
                tools:orientation="horizontal"
                tools:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

            <TextView
                android:id="@+id/tv_phone_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="42dp"
                android:textSize="24sp"
                android:text="@string/module_mine_feedback_phone_tip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_content"/>


            <EditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="40dp"
                android:background="@null"
                android:inputType="phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_phone_tip"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:background="@color/line"
                app:layout_constraintStart_toStartOf="@id/et_phone"
                app:layout_constraintEnd_toEndOf="@id/et_phone"
                app:layout_constraintBottom_toBottomOf="@id/et_phone"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>