<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/module_mine_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/module_mine_icon_back_black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/module_mine_setting"
            android:textColor="@color/gray_one"
            android:textSize="32sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/module_mine_account"
            android:textColor="@color/gray_one"
            android:textSize="20sp"/>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_info_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/module_mine_icon_personal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/module_mine_edit_info"
                android:textColor="@color/gray_one"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_info_icon"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/module_mine_icon_right_arrow_32_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                style="@style/module_mine_line"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_set_psw"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_set_password_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/module_mine_icon_password_set"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/module_mine_password_setting"
                android:textColor="@color/gray_one"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_set_password_icon"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/module_mine_icon_right_arrow_32_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                style="@style/module_mine_line"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_bind_social"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_bind_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/module_mine_icon_binding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/module_mine_bind_social"
                android:textColor="@color/gray_one"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_bind_icon"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/module_mine_icon_right_arrow_32_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                style="@style/module_mine_line"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_set_message"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_message_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/module_mine_icon_msg_set"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/module_mine_message_setting"
                android:textColor="@color/gray_one"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_message_icon"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/module_mine_icon_right_arrow_32_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                style="@style/module_mine_line"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/module_mine_service"
            android:textColor="@color/gray_one"
            android:textSize="20sp"/>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_feedback"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_feedback_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/module_mine_icon_feedback"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/module_mine_feedback"
                android:textColor="@color/gray_one"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_feedback_icon"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/module_mine_icon_right_arrow_32_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                style="@style/module_mine_line"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_check_update"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_set_check_update_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/module_mine_icon_update"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/module_mine_check_update"
                android:textColor="@color/gray_one"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_set_check_update_icon"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/module_mine_icon_right_arrow_32_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                style="@style/module_mine_line"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_user_protocol"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_user_protorol_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/module_mine_icon_protocol"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/module_mine_user_protocol"
                android:textColor="@color/gray_one"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_user_protorol_icon"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/module_mine_icon_right_arrow_32_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                style="@style/module_mine_line"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_about_us"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_about_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/module_mine_icon_about_us"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/module_mine_about_us"
                android:textColor="@color/gray_one"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_about_icon"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/module_mine_icon_right_arrow_32_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                style="@style/module_mine_line"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_exit_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_exit_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/module_mine_icon_quit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/module_mine_exit"
                android:textColor="@color/gray_one"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_exit_icon"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/module_mine_icon_right_arrow_32_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                style="@style/module_mine_line"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>