<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/module_mine_shape_login_bg"
    android:paddingTop="25dp">

    <include
        android:id="@+id/panel_toolbar"
        layout="@layout/module_mine_panel_login_toolbar"/>

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/module_mine_input_account_psw"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/panel_toolbar"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_phone_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/module_mine_shape_input_bg"
        app:layout_constraintTop_toBottomOf="@id/tv_hint">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_select_country"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="+86"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/module_mine_icon_enlarge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_country_code"
                app:layout_constraintTop_toTopOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <EditText
            android:id="@+id/et_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/module_mine_input_phone_or_fxchat"
            android:inputType="phone"
            android:textColor="@color/module_mine_white"
            android:textColorHint="#4DFFFFFF"
            android:textCursorDrawable="@drawable/module_mine_login_cursor_yellow"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_correct"
            app:layout_constraintStart_toEndOf="@id/cl_select_country"/>

        <ImageView
            android:id="@+id/iv_correct"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/module_mine_icon_correct"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/module_mine_shape_input_bg"
        app:layout_constraintTop_toBottomOf="@id/cl_phone_input">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:background="@null"
            android:hint="@string/module_mine_input_psw"
            android:textColor="@color/module_mine_white"
            android:textColorHint="#4DFFFFFF"
            android:textCursorDrawable="@drawable/module_mine_login_cursor_yellow"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/iv_psw_display"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/module_mine_icon_hide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_bottom"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/module_mine_icon_next_disabled"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/iv_confirm"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/module_mine_icon_control_selected"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_confirm"
            app:layout_constraintTop_toTopOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>